--- a/ingreso.html
+++ b/ingreso.html
@@ -18,9 +18,9 @@
         <nav class="red darken-4">
 
                 <div class="nav-wrapper m6">
-                    <a href="#" class="brand-logo right">Logo</a>
+                    <a href="index.html" class="right">Cerrar sesión</a>
                     <ul id="nav-mobile" class="left hide-on-med-and-down">
-                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="home.html">Inicio</a></li>
                         <li><a href="badges.html">Components</a></li>
                         <li><a href="collapsible.html">JavaScript</a></li>
                     </ul>
