--- a/paginas/index.html
+++ b/paginas/index.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<body>
+<body background="fondo.jpg">
     <section class="container section">
         <div class="container">
             <div class="container row">
