--- a/paginas/modificar.html
+++ b/paginas/modificar.html
@@ -17,14 +17,14 @@
     <header>
         <nav class="red darken-4">
 
-                <div class="nav-wrapper m6">
-                    <a href="index.html" class="right">Cerrar sesión</a>
-                    <ul id="nav-mobile" class="left hide-on-med-and-down">
-                        <li><a href="home.html">Inicio</a></li>
-                        <li><a href="eliminar.html">eliminar</a></li>
-                        <li><a href="modificar.html">modificar</a></li>
-                    </ul>
-                </div>
+            <div class="nav-wrapper m6">
+                <a href="index.html" class="right">Cerrar sesión</a>
+                <ul id="nav-mobile" class="left hide-on-med-and-down">
+                    <li><a href="home.html">Inicio</a></li>
+                    <li><a href="eliminar.html">eliminar</a></li>
+                    <li><a href="modificar.html">modificar</a></li>
+                </ul>
+            </div>
 
 
         </nav>
@@ -34,6 +34,11 @@
         <div class="card">
             <div class="row">
                 <form class="col s12">
+                    <div class="input-field col s6">
+                        <input placeholder="ID" id="ID" type="text" class="validate">
+                        <label for="first_name">ID del libro</label>
+                    </div>
+
                     <div class="row">
                         <div class="input-field col s6">
                             <input placeholder="Placeholder" id="first_name" type="text" class="validate">
