--- a/paginas/home.html
+++ b/paginas/home.html
@@ -25,8 +25,8 @@
                 <a href="index.html" class="right">Cerrar sesión</a>
                 <ul id="nav-mobile" class="left hide-on-med-and-down">
                     <li><a href="home.html">Inicio</a></li>
-                    <li><a href="badges.html">Components</a></li>
-                    <li><a href="collapsible.html">JavaScript</a></li>
+                    <li><a href="eliminar.html">eliminar</a></li>
+                    <li><a href="modificar.html">modificar</a></li>
                 </ul>
             </div>
         </nav>
