--- a/paginas/home.html
+++ b/paginas/home.html
@@ -111,7 +111,7 @@
                 <div class="col s12" id="mostrar">
                     <div class="row">
                         <div class="row">
-                            <button onclick="verDatos()">Aceptar</button>
+                            <button onclick="verDatos()">Mostrar</button>
                             <table>
                                 <thead>
                                     <tr>
