--- a/paginas/home.html
+++ b/paginas/home.html
@@ -23,12 +23,7 @@
         <nav class="red darken-4">
             <div class="nav-wrapper">
                 <a href="index.html" class="right">Cerrar sesión</a>
-                <ul id="nav-mobile" class="left hide-on-med-and-down">
-                    <li><a href="home.html">Inicio</a></li>
-                    <li><a href="ingreso.html">Ingresar</a></li>
-                    <li><a href="eliminar.html">eliminar</a></li>
-                    <li><a href="modificar.html">modificar</a></li>
-                </ul>
+                <a href="home.html" class="left">Inicio</a>
             </div>
         </nav>
     </header>
