--- a/paginas/home.html
+++ b/paginas/home.html
@@ -36,10 +36,8 @@
     <section class=" section" id="services">
         <div class="row card">
             <div class="col s12 l4">
-                <h2 class="indigo-text text-darken-4">Menú con tabs</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, accusamus minima. Autem delectus
-                    consequuntur impedit dignissimos! Pariatur, optio. Magnam vero quam voluptates dolor ipsum rerum
-                    eveniet, modi repellendus illo accusantium!</p>
+                <h2 class="indigo-text text-darken-4">Menú</h2>
+                <p></p>
             </div>
             <div class="col s12 l6 offset-l2">
                 <ul class="tabs">
