--- a/paginas/index.html
+++ b/paginas/index.html
@@ -22,22 +22,20 @@
                     <div class="card red darken-4 darken-1">
                         <div class="card-content white-text">
                             <span class="card-title">Inicio de sesión</span>
-                            <p>I am a very simple card. I am good at containing small bits of information.
-                                I am convenient because I require little markup to use effectively.</p>
                         </div>
                         <div class="card-action">
                             <div class="row">
                                 <form class="col s12">
                                     <div class="row">
                                         <div class="input-field col s6">
-                                            <input placeholder="Placeholder" id="first_name" type="text" class="validate">
-                                            <label for="first_name">First Name</label>
+                                            <input placeholder="Ej: pepe" id="first_name" type="text" class="validate">
+                                            <label for="first_name">Nombre de usuario</label>
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="input-field col s12">
-                                            <input id="password" type="password" class="validate">
-                                            <label for="password">Password</label>
+                                            <input id="password" placeholder="Ej: 123456" type="password" class="validate">
+                                            <label for="password">Contraseña</label>
                                         </div>
                                     </div>
                                     <a class="waves-effect waves-light btn" href="home.html">Iniciar sesión</a>
