--- a/paginas/index.html
+++ b/paginas/index.html
@@ -8,6 +8,9 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase-firestore.js"></script>
     <script src="css.css"></script>
 
     <title>Inicio</title>
@@ -39,6 +42,7 @@
                                         </div>
                                     </div>
                                     <a class="waves-effect waves-light btn" href="home.html">Iniciar sesión</a>
+                                    <button onclick="inicio()">Acceder</button>
                                 </form>
                             </div>
                         </div>
@@ -51,6 +55,11 @@
 
 
 
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+    <script src="index.js"></script>
 </body>
 
 
