--- a/paginas/index.html
+++ b/paginas/index.html
@@ -19,7 +19,7 @@
 
 <body background="fondo.jpg">
     <section class="container section">
-        <div class="container">
+        <div class="container" id="login">
             <div class="container row">
                 <div class="col s12 ">
                     <div class="card red darken-4 darken-1">
@@ -46,6 +46,20 @@
                                 </form>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <section class="container section">
+        <div class="container" id="user">
+            <div class="container row">
+                <div class="col s12 ">
+                    <div class="card red darken-4 darken-1">
+                        <div class="card-content white-text">
+                            <span class="card-title">Inicio de sesión</span>
+                        </div> 
                     </div>
                 </div>
             </div>
