--- a/paginas/home.html
+++ b/paginas/home.html
@@ -18,11 +18,11 @@
 
 </head>
 
-<body background="fondo.jpg">
+<body background="fondo.jpg" id="body">
     <header>
         <nav class="red darken-4">
             <div class="nav-wrapper">
-                <a href="index.html" class="right">Cerrar sesión</a>
+                <button onclick="salir()" class="right">Cerrar</button>
                 <a href="home.html" class="left">Inicio</a>
             </div>
         </nav>
