--- a/paginas/index.html
+++ b/paginas/index.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<body background="fondo.jpg" id="body">
+<body background="https://firebasestorage.googleapis.com/v0/b/biblioteca-d01e8.appspot.com/o/fondo.jpg?alt=media&token=1f6045a3-62da-4472-8fd9-cc75d7f4dc5d" id="body">
     <section class="container section">
         <div class="container" id="login">
             <div class="container row">
