--- a/paginas/home.html
+++ b/paginas/home.html
@@ -18,7 +18,7 @@
 
 </head>
 
-<body background="fondo.jpg" id="body">
+<body background="https://firebasestorage.googleapis.com/v0/b/biblioteca-d01e8.appspot.com/o/fondo.jpg?alt=media&token=1f6045a3-62da-4472-8fd9-cc75d7f4dc5d" id="body">
     <header>
         <nav class="red darken-4">
             <div class="nav-wrapper">
@@ -33,7 +33,7 @@
             <div class="col s12 l4">
                 <h2 class="indigo-text text-darken-4">Menú</h2>
 
-                <img src="biblio.jpg" width="650" height="100%">
+                <img src="https://firebasestorage.googleapis.com/v0/b/biblioteca-d01e8.appspot.com/o/biblio.jpg?alt=media&token=fe998c80-6be7-4506-bb28-3507b8913f69" width="650" height="100%">
 
 
             </div>
